# bonfire

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIRRORS.md  README.md  code-synth-bon351.md  complexipy-snapshot.json  exemptions.json  file-budget.json  mypy-baseline.txt  pyproject.toml  sage-memo-bon351.md
.claude/: settings.local.json.example
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  quality.yml  release.yml  smoke.yml
agents/: bonfire-powered.md  knight.md  sage.md  scout-conservative.md  scout-innovative.md  warrior.md  wizard.md
data/: sticky-intro.md
docs/: architecture.md  box-operator.md  pipeline-stages.md  release-gate-tickets.md  release-gates.md  release-policy.md  scan-front-door-protocol.md  style.md  wizard-playbook.md
docs/_lore/: passelewe.md
docs/adr/: ADR-001-naming-vocabulary.md  ADR-002-failure-architecture.md  ADR-005-open-core.md
docs/agents/: _bon-954-knight-contract.md
docs/audit/knight-memos/: cluster-348-knight-a-20260430T194436Z.md  cluster-348-knight-b-20260430T193739Z.md  cluster-350-docs-knight-a-20260430T193646Z.md  cluster-350-docs-knight-b-20260430T193317Z.md  cluster-351-knight-a-20260430T210000Z.md  cluster-351-knight-b-20260430T210000Z.md
docs/audit/retrospective/: cluster-351-warrior-b-20260430T220000Z.md  code-reviewer-2026-04-18T20-30-50Z.json  code-reviewer-2026-04-18T20-30-50Z.md  code-reviewer-20260417T233626Z.json  code-reviewer-20260417T233626Z.md  code-reviewer-20260418T024351Z.json  code-reviewer-20260418T024351Z.md  code-reviewer-20260418T025952Z.json  code-reviewer-20260418T025952Z.md  code-reviewer-20260418T172251Z.json  code-reviewer-20260418T172251Z.md  code-reviewer-20260418T172339Z.json  code-reviewer-20260418T172339Z.md  prospective-bon-331-knight-code-reviewer-20260417T230543Z.json  prospective-bon-331-knight-code-reviewer-20260417T230543Z.md  wizard-2026-04-18T20-38-47Z.json  wizard-2026-04-18T20-38-47Z.md  wizard-20260417T233600Z.json  wizard-20260417T233600Z.md  wizard-20260418T024318Z.json  wizard-20260418T024318Z.md  wizard-20260418T024502Z.json  wizard-20260418T024502Z.md  wizard-20260418T172248Z.json  wizard-20260418T172248Z.md  wizard-20260418T172340Z.json  wizard-20260418T172340Z.md
docs/audit/sage-decisions/: _template-sage-memo.md  bon-332-sage-20260418T004817Z.md  bon-333-sage-20260418T004958Z.md  bon-334-sage-2026-04-18T19-14-42Z.md  bon-335-sage-2026-04-18T03-42-14Z.md  bon-336-sage-20260418T034115Z.md  bon-337-unified-sage-2026-04-18.md  bon-338-unified-sage-2026-04-18.md  bon-340-sage.md  bon-341-sage-20260422T235032Z.md  bon-341-sage-code-synth-20260424T014625Z.md  bon-341-sage-contract-lock-20260423T013725Z.md  bon-342-sage.md  bon-343-sage.md  bon-344-code-synth-20260425T204958Z.md  bon-344-contract-lock-20260425T192700Z.md  bon-344-sage-20260424T022424Z.md  bon-345-sage.md  bon-346-sage.md  bon-347-code-synth-20260426T010000Z.md  bon-347-contract-lock-20260426T000357Z.md  bon-347-sage-20260425T230115Z.md  bon-348-code-synth-20260426T185936Z.md  bon-348-contract-lock-20260426T024229Z.md  bon-348-sage-20260426T013845Z.md  bon-349-code-synth-20260426T011022Z.md  bon-349-contract-lock-20260426T003455Z.md  bon-349-sage-20260425T230159Z.md  bon-350-code-synth-20260427T195427Z.md  bon-350-contract-lock-20260427T193204Z.md  bon-350-sage-20260427T182947Z.md  bon-513-sage-20260428T210000Z.md  bon-513-sage-A-20260428T210000Z.md  bon-513-sage-CL-20260428T210000Z.md  bon-513-sage-D-20260428T210000Z.md  bon-513-sage-code-synth-20260430T030000Z.md  bon-519-sage-20260428T033101Z.md  bon-520-cross-wave-reconciliation.md  cluster-348-sage-20260430T200000Z.md  cluster-350-sage-20260430T200500Z.md  (+4 more)
docs/contributor-guide/: wizard-pre-stage.md
docs/product/: discipline.md
docs/reconcile/: product-identity-decision.md  staged-replay-plan.md
docs/specs/: ism-v1.md
scripts/: check_protocol_doc_citations.py  check_tag_version.py  petri_conversational_driver.py
src/bonfire/: __init__.py  _discovery.py  _safe_read.py  _safe_write.py  cli.py  errors.py  naming.py  protocols.py  timeouts.py
src/bonfire/agent/: __init__.py  (+3 more)
tests/: conftest.py  test_bracket_pass_report_parity.py  test_no_internal_tracker_refs_in_source.py  test_security_hooks_cross_platform.py  test_verdict_parity.py
tests/dispatch/: test_trust_project_settings_key.py
tests/e2e/: Dockerfile
tests/integration/: test_budget_enforcement.py  test_constitution_canon_pointer.py  test_constitution_module_names.py  test_constitution_present.py  test_e2e_runner_contract.py  test_merge_preflight_pipeline.py  test_retrieval_mcp_server.py  test_retrieval_mcp_server_timeout.py
tests/scripts/: test_check_protocol_doc_citations.py  test_petri_conversational_driver.py
tests/smoke/: smoke_test.py  test_350_dft_doc_invariants.py  test_350_dft_doc_invariants_innovation.py  test_no_plural_workflows.py
tests/unit/: _strict_fake_lexicon.py  test_adr_001_ratified_exceptions.py  test_analysis_fingerprint.py  test_analysis_models.py  test_analysis_schema.py  test_architect_handler.py  test_architecture_doc_exists.py  test_bard_handler.py  test_bon_1072_cost_accounting_close.py  test_bon_1073_security_polish.py  test_bon_1074_onboard_polish.py  test_bon_1075_read_symmetric_hardening.py  test_bon_1100_install_skill.py  test_bounce_target_cost_propagation.py  test_build_agents.py  test_cadre.py  test_cadre_plugin_definitions.py  test_candy_metadata.py  test_check_tag_version.py  test_classifier.py  test_classifier_module_surface.py  test_claude_memory_scan.py  test_cli_app_no_dispatch_command.py  test_cli_conservative.py  test_cli_lazy_imports.py  test_config.py  test_config_generator_symlink_reject.py  test_conversation_message_cap.py  test_cost_analyzer.py  test_cost_analyzer_caching.py  test_cost_analyzer_memoization.py  test_cost_cli.py  test_cost_consumer.py  test_cost_ledger_failed_records.py  test_cost_models.py  test_cost_tracker_reset.py  test_default_identity_templates.py  test_discovery.py  test_dispatch_cost.py  test_dispatch_options_permission_default.py  (+215 more)
(+190 files in other folders)
